<resources>
    <string name="app_name">Link Chat</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="chatsFragment">Chats Fragment</string>
    <string name="contactsFragment">Contacts Fragment</string>

    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>

    <string name="enterTextHolder">Type a message</string>
    <string name="resetAccount">Reset Account?</string>
    <string name="createAccount">Create a new account</string>
    <string name="logo">Logo</string>
    <string name="alreadyRegistered">Already Registered?</string>
    <string name="register">Register</string>
    <string name="resetPassword">Reset Password</string>
    <string name="name">Name</string>
    <string name="update">Update Profile</string>
    <string name="profilephoto">Profile Picture</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="signout">Sign out</string>
    <string name="find_user">Find User</string>
    <string name="userprofile">User Profile</string>
    <string name="messagehint">Enter message here...</string>

    <string name="about">About</string>
    <string name="info">Version 1.0.1</string>
</resources>
